2005-08-03  Ross Burton  <ross@burtonini.com>

	* glib/gstdio.c:
	Fix DocBook tag typo. (#311966)

2005-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstdio.h: Add G_BEGIN_DECLS/G_END_DECLS.  (#312424)

2005-08-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gconvert.c (g_convert_with_iconv): Don't go in an
	infinite loop if the input text ends in an incomplete multibyte
	character.  (#312402, Sebastien Bacher)

	* Bump version

	* === Released 2.7.5 ===

	* NEWS: Updates

2005-08-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gconvert.c (g_convert_with_iconv, g_convert_with_fallback):
	Cleanup converter state after the conversion. Document streaming
	conversion pitfalls.  (#311337)

2005-08-02  Tor Lillqvist  <tml@novell.com>

	* tests/refcount/objects.c 
	* tests/refcount/properties.c 
	* tests/refcount/signals.c: Use g_usleep() instead of sleep() for
	portability.

Mon Aug  1 23:33:47 2005  Tim Janik  <timj@imendio.com>

	* tests/refcount/closures.c: test high contention on closure
	reference counts to trigger and catch non-atomic updates.

	* tests/refcount/objects.c:
	* tests/refcount/objects2.c: 
	* tests/refcount/properties.c: 
	* tests/refcount/properties2.c: 
	* tests/refcount/signals.c:
	fixed up test and threading fundamentals. variables accessed from all 
	threads need to be volatile. context switches are enforced by using
	g_thread_yield(), not g_usleep(1) which may result in busy waits on 
	some platforms. for testcode, always consider all warnings and
	critical messages fatal. issue the currently running program on
	stdout. improved progress indicators.

	* tests/refcount/properties.c:
	* tests/refcount/objects.c:
	don't overdo the number of testing threads to keep the testing machine
	usable, 2 threads can produce as much contention as 20 if executing the
	same code.

	* tests/refcount/signals.c: only start 1 thread per object. GObject 
	doesn't provide mutually exclusive object access, but only mutually